--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <!--Tabs-->
     <div class="container my-3">
       <div class="row">
-        <div class="col">
+        <div class="col-md-3">
           <h4>Food</h4>
           <div class="card">
             <figure class="figure">
@@ -135,7 +135,7 @@
             </figure>
           </div>
         </div>
-        <div class="col">
+        <div class="col-md-3">
           <h4>Drink</h4>
           <div class="card">
             <figure class="figure">
@@ -150,7 +150,7 @@
             </figure>
           </div>
         </div>
-        <div class="col">
+        <div class="col-md-3">
           <h4>Snack</h4>
           <div class="card">
             <figure class="figure">
@@ -165,7 +165,7 @@
             </figure>
           </div>
         </div>
-        <div class="col">
+        <div class="col-md-3">
           <h4>Party</h4>
           <div class="card">
             <figure class="figure">
@@ -183,6 +183,7 @@
       </div>
     </div>
   </div>
+  
   <!--End of Best Pick-->
   <!--Contact-->
   <div class="px-4 py-5 my-1 ">
