--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 
 <body>
   <!--Navigation Bar Start-->
-  <nav class="navbar navbar-expand navbar-dark fixed-top" aria-label="Second navbar example">
+  <nav class="navbar navbar-expand fixed-top" aria-label="Second navbar example">
     <div class="container">
-      <a class="navbar-brand " href="index.html">Warung Hati</a>
+      <a class="navbar-brand" href="index.html">
+        <h3>Warung Hati</h3>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02"
         aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -115,11 +117,11 @@
   <!--End Quick about us-->
 
   <!--Best Pick-->
-  <div class="py-4">
-    <h1 class="fw-bold mb-2 display-5 text-center">Our recommendation of</h1>
+  <div class="container py-5">
+    <h1 class="fw-bold mb-2 display-5 text-center">Our recommendation</h1>
     <!--Tabs-->
     <div class="container my-3">
-      <div class="row">
+      <div class="row gy-3">
         <div class="col-md-3">
           <h4>Food</h4>
           <div class="card">
@@ -127,7 +129,8 @@
               <img src="img/2. Menu Utama/Gado-Gado 3.png" class="figure-img img-fluid rounded-top" alt="...">
               <div class="px-3 mt-2">
                 <h4>Gado-Gado</h4>
-                <figcaption class="blockquote-footer mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                <figcaption class="blockquote-footer mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ullam
                   incidunt praesentium esse iure
                   unde, in doloribus commodi fugiat nobis cupiditate repellendus expedita amet sunt vero assumenda
                   nostrum voluptatum nisi! Eveniet?</figcaption>
@@ -142,7 +145,8 @@
               <img src="img/2. Menu Utama/Gado-Gado 3.png" class="figure-img img-fluid rounded-top" alt="...">
               <div class="px-3 mt-2">
                 <h4>Gado-Gado</h4>
-                <figcaption class="blockquote-footer mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                <figcaption class="blockquote-footer mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ullam
                   incidunt praesentium esse iure
                   unde, in doloribus commodi fugiat nobis cupiditate repellendus expedita amet sunt vero assumenda
                   nostrum voluptatum nisi! Eveniet?</figcaption>
@@ -157,7 +161,8 @@
               <img src="img/2. Menu Utama/Gado-Gado 3.png" class="figure-img img-fluid rounded-top" alt="...">
               <div class="px-3 mt-2">
                 <h4>Gado-Gado</h4>
-                <figcaption class="blockquote-footer mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                <figcaption class="blockquote-footer mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ullam
                   incidunt praesentium esse iure
                   unde, in doloribus commodi fugiat nobis cupiditate repellendus expedita amet sunt vero assumenda
                   nostrum voluptatum nisi! Eveniet?</figcaption>
@@ -172,7 +177,8 @@
               <img src="img/2. Menu Utama/Gado-Gado 3.png" class="figure-img img-fluid rounded-top" alt="...">
               <div class="px-3 mt-2">
                 <h4>Gado-Gado</h4>
-                <figcaption class="blockquote-footer mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                <figcaption class="blockquote-footer mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ullam
                   incidunt praesentium esse iure
                   unde, in doloribus commodi fugiat nobis cupiditate repellendus expedita amet sunt vero assumenda
                   nostrum voluptatum nisi! Eveniet?</figcaption>
@@ -183,10 +189,10 @@
       </div>
     </div>
   </div>
-  
+
   <!--End of Best Pick-->
   <!--Contact-->
-  <div class="px-4 py-5 my-1 ">
+  <div class="px-4 py-5 my-1">
     <h1 class="display-1 fw-bold text-center">Contact</h1>
     <h3 class="display-5 text-center">For reservation and more information</h3>
     <div class="container mt-5 text-center">
