--- a/index.html
+++ b/index.html
@@ -93,22 +93,22 @@
   <!--Quick About us-->
   <div class="py-4">
     <div class="container my-5">
+      <h1 class="display-5 text-center fw-bold">Who are we?</h1>
       <div class="row">
-        <div class="col">
-          <img class="img-thumbnail" alt="" src="img/img (1).jpg">
+        <div class="col-md-6">
+          <img class="img-thumbnail" alt="" src="img/4. Minuman/Es Campur.png">
         </div>
-        <div class="col px-4">
-          <h1 class="display-5 fw-bold">Who are we?</h1>
-          <p class="text-start lh-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et
-            dolore magna aliqua. Sit amet porttitor eget dolor morbi. Etiam sit amet nisl purus in mollis nunc sed id.
-            Adipiscing bibendum est ultricies integer quis auctor elit sed vulputate. Sed adipiscing diam donec
-            adipiscing tristique risus nec. Placerat in egestas erat imperdiet sed.
-          </p>
-          <div class="text-center">
-            <a href="aboutus.html">
-              <button class="btn-outline-primary">Learn More</button>
-            </a>
+        <div class="col-md-6 mt-2 mt-md-1 px-4">
+          <div class="d-flex flex-column justify-content-center align-items-start h-100">
+            <p class="text-start lh-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Sit amet porttitor eget dolor morbi. Etiam sit amet nisl
+              purus in mollis nunc sed id. Adipiscing bibendum est ultricies integer quis auctor elit sed vulputate. Sed
+              adipiscing diam donec adipiscing tristique risus nec. Placerat in egestas erat imperdiet sed.</p>
+            <div class="mt-3 text-center">
+              <a href="aboutus.html" class="text-decoration-none">
+                <button class="btn btn-primary text-center">Learn More</button>
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -117,8 +117,8 @@
   <!--End Quick about us-->
 
   <!--Best Pick-->
-  <div class="container py-5">
-    <h1 class="fw-bold mb-2 display-5 text-center">Our recommendation</h1>
+  <div class="container py-4">
+    <h1 class="display-5 text-center fw-bold">Our recommendation</h1>
     <!--Tabs-->
     <div class="container my-3">
       <div class="row gy-3">
@@ -192,26 +192,26 @@
 
   <!--End of Best Pick-->
   <!--Contact-->
-  <div class="px-4 py-5 my-1">
-    <h1 class="display-1 fw-bold text-center">Contact</h1>
-    <h3 class="display-5 text-center">For reservation and more information</h3>
+  <div class="px-4 py-4 my-1">
+    <h1 class="display-5 text-center fw-bold">Contact Us</h1>
+    <h3 class="display-5 text-center fw-lighter ">For reservation and more information</h3>
     <div class="container mt-5 text-center">
       <div class="row py-5">
-        <div class="col">
+        <div class="col-md-4">
           <span class="fa-stack fa-5x mb-4">
             <i class="fa-solid fa-square fa-stack-2x"></i>
             <i class="fa-brands fa-whatsapp fa-stack-1x fa-inverse"></i>
           </span>
           <h4>(+62) 927 2194 196</h4>
         </div>
-        <div class="col">
+        <div class="col-md-4">
           <span class="fa-stack fa-5x mb-4">
             <i class="fa-solid fa-square fa-stack-2x"></i>
             <i class="fa-regular fa-envelope fa-stack-1x fa-inverse"></i>
           </span>
           <h4>tambakarna@greendike.com</h4>
         </div>
-        <div class="col">
+        <div class="col-md-4">
           <span class="fa-stack fa-5x mb-4">
             <i class="fa-solid fa-square fa-stack-2x"></i>
             <i class="fa-regular fa-location-dot fa-stack-1x fa-inverse"></i>
