--- a/menu.html
+++ b/menu.html
@@ -16,9 +16,11 @@
 
 <body>
   <!--Navigation Bar Start-->
-  <nav class="navbar navbar-expand navbar-dark navbar-scrolled sticky-top" aria-label="Second navbar example">
+  <nav class="navbar navbar-expand navbar-scrolled fixed-top" aria-label="Second navbar example">
     <div class="container">
-      <a class="navbar-brand " href="index.html">Warung Hati</a>
+      <a class="navbar-brand" href="index.html">
+        <h3>Warung Hati</h3>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02"
         aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -1557,8 +1559,8 @@
     </div>
   </div>
   <!--Footer-->
-  <div class="footer pt-3 mt-5">
-    <footer>
+  <footer>
+  <div class="footer mt-auto pt-3 mt-5">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -1584,8 +1586,8 @@
           </div>
         </div>
       </div>
-    </footer>
-  </div>
+    </div>
+  </footer>
 </body>
 </script>
 
