--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
         </div>
         <div class="col-md-6 mt-2 mt-md-1 px-4">
           <div class="d-flex flex-column justify-content-center align-items-start h-100">
-            <p class="text-start lh-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            <p class="text-start text-center lh-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
               incididunt ut labore et dolore magna aliqua. Sit amet porttitor eget dolor morbi. Etiam sit amet nisl
               purus in mollis nunc sed id. Adipiscing bibendum est ultricies integer quis auctor elit sed vulputate. Sed
               adipiscing diam donec adipiscing tristique risus nec. Placerat in egestas erat imperdiet sed.</p>
-            <div class="mt-3 text-center">
+            <div class="mt-3 align-content-center">
               <a href="aboutus.html" class="text-decoration-none">
                 <button class="btn btn-primary text-center">Learn More</button>
               </a>
