--- a/index.html
+++ b/index.html
@@ -91,29 +91,26 @@
   <!--End of Slideshow-->
 
   <!--Quick About us-->
-  <div class="py-4">
-    <div class="container my-5">
-      <h1 class="display-5 text-center fw-bold">Who are we?</h1>
-      <div class="row">
-        <div class="col-md-6">
-          <img class="img-thumbnail" alt="" src="img/4. Minuman/Es Campur.png">
+  <div class="container my-5">
+    <div class="row">
+      <div class="col-md-6">
+        <div id="slideshow" class="carousel slide" data-bs-ride="carousel">
+          <!-- Slideshow content here -->
         </div>
-        <div class="col-md-6 mt-2 mt-md-1 px-4">
-          <div class="d-flex flex-column justify-content-center align-items-start h-100">
-            <p class="text-start text-center lh-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Sit amet porttitor eget dolor morbi. Etiam sit amet nisl
-              purus in mollis nunc sed id. Adipiscing bibendum est ultricies integer quis auctor elit sed vulputate. Sed
-              adipiscing diam donec adipiscing tristique risus nec. Placerat in egestas erat imperdiet sed.</p>
-            <div class="mt-3 align-content-center">
-              <a href="aboutus.html" class="text-decoration-none">
-                <button class="btn btn-primary text-center">Learn More</button>
-              </a>
+      </div>
+      <div class="col-md-6 mt-4 mt-md-0">
+        <div class="text-center text-md-start">
+          <h2 class="fw-bold">About Us</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut odio vel urna tristique bibendum vel vel
+            magna. Proin in sem euismod, convallis massa vel, pharetra urna.</p>
+            <div class="d-flex justify-content-center align-items-center">
+              <a href="about.html" class="btn btn-primary mt-3">Learn More</a>
             </div>
-          </div>
         </div>
       </div>
     </div>
   </div>
+
   <!--End Quick about us-->
 
   <!--Best Pick-->
