--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
+  
       <div class="collapse navbar-collapse" id="navbarsExample02">
-        <ul class="navbar-nav ms-auto">
+        <ul class="navbar-nav ml-auto ms-3">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
@@ -41,6 +41,8 @@
       </div>
     </div>
   </nav>
+  
+  
   <!--End of Navbar-->
   <!--Slideshow start-->
   <div id="bg-carousel" class="carousel slide" data-bs-ride="carousel">
@@ -186,7 +188,6 @@
       </div>
     </div>
   </div>
-
   <!--End of Best Pick-->
   <!--Contact-->
   <div class="px-4 py-4 my-1">
