--- a/aboutus.html
+++ b/aboutus.html
@@ -13,7 +13,65 @@
   <link rel="stylesheet" href="fontawesome/css/solid.css">
   <title>Home</title>
 </head>
+
 <body>
-    
+  <!--Navigation Bar Start-->
+  <nav class="navbar navbar-expand fixed-top" aria-label="Second navbar example">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <h3>Warung Hati</h3>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02"
+        aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExample02">
+        <ul class="navbar-nav ml-auto ms-3">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="menu.html">Menu</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="aboutus.html">About Us</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!--End of Navbar-->
+
+  <!--Footer-->
+  <footer class="footer pt-3">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h4>Warung Hati</h4>
+        </div>
+        <div class="col text-end">
+          <a href="https://twitter.com/?lang=id" aria-label="go to twitter" class="text-decoration-none">
+            <i class="fa-brands fa-twitter px-2 fa-xl social"></i>
+          </a>
+          <a href="https://twitter.com/?lang=id" aria-label="go to facebook" class="text-decoration-none">
+            <i class="fa-brands fa-square-facebook px-2 fa-xl social"></i>
+          </a>
+          <a href="https://twitter.com/?lang=id" aria-label="go to instagram" class="text-decoration-none">
+            <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
+          </a>
+          <a href="https://twitter.com/?lang=id" aria-label="go to tiktok" class="text-decoration-none">
+            <i class="fa-brands fa-tiktok px-2 fa-xl social"></i>
+          </a>
+        </div>
+        <hr class="mt-1" />
+        <div class="text-center">
+          <p>@copyright by Warung Hati.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!--End of Footer-->
 </body>
+
 </html>
