--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
     </div>
   </nav>
   
-  
   <!--End of Navbar-->
   <!--Slideshow start-->
   <div id="bg-carousel" class="carousel slide" data-bs-ride="carousel">
@@ -220,35 +219,34 @@
     </div>
   </div>
   <!--Footer-->
-  <div class="footer pt-3">
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <h4>Warung Hati</h4>
-          </div>
-          <div class="col text-end">
-            <a href="https://twitter.com/?lang=id" aria-label="go to twitter" class="text-decoration-none">
-              <i class="fa-brands fa-twitter px-2 fa-xl social"></i>
-            </a>
-            <a href="https://twitter.com/?lang=id" aria-label="go to facebook" class="text-decoration-none">
-              <i class="fa-brands fa-square-facebook px-2 fa-xl social"></i>
-            </a>
-            <a href="https://twitter.com/?lang=id" aria-label="go to instagram" class="text-decoration-none">
-              <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
-            </a>
-            <a href="https://twitter.com/?lang=id" aria-label="go to tiktok" class="text-decoration-none">
-              <i class="fa-brands fa-tiktok px-2 fa-xl social"></i>
-            </a>
-          </div>
-          <hr class="mt-1" />
-          <div class="text-center">
-            <p>@copyright by Warung Hati. Designed by cold_rawon</p>
-          </div>
+  <footer class="footer pt-3">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h4>Warung Hati</h4>
+        </div>
+        <div class="col text-end">
+          <a href="https://twitter.com/?lang=id" aria-label="go to twitter" class="text-decoration-none">
+            <i class="fa-brands fa-twitter px-2 fa-xl social"></i>
+          </a>
+          <a href="https://twitter.com/?lang=id" aria-label="go to facebook" class="text-decoration-none">
+            <i class="fa-brands fa-square-facebook px-2 fa-xl social"></i>
+          </a>
+          <a href="https://twitter.com/?lang=id" aria-label="go to instagram" class="text-decoration-none">
+            <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
+          </a>
+          <a href="https://twitter.com/?lang=id" aria-label="go to tiktok" class="text-decoration-none">
+            <i class="fa-brands fa-tiktok px-2 fa-xl social"></i>
+          </a>
+        </div>
+        <hr class="mt-1" />
+        <div class="text-center">
+          <p>@copyright by Warung Hati.</p>
         </div>
       </div>
-    </footer>
-  </div>
+    </div>
+  </footer>
+  <!--End of Footer-->
 </body>
 <script>
   const navEl = document.querySelector('.navbar');
