--- a/menu.html
+++ b/menu.html
@@ -25,9 +25,9 @@
         aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
+  
       <div class="collapse navbar-collapse" id="navbarsExample02">
-        <ul class="navbar-nav ms-auto">
+        <ul class="navbar-nav ml-auto ms-3">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="index.html">Home</a>
           </li>
@@ -42,29 +42,42 @@
     </div>
   </nav>
   <!--End of Navbar-->
+  <!--Tabs of category-->
   <div class="container mt-5">
     <div class="text-center">
       <p>Menu</p>
       <h4>Here our Best Menu</h4>
     </div>
-    <ul class="nav nav-pills justify-content-center mt-3" id="Food-Tab">
+    <ul class="nav nav-colorfirst justify-content-center mt-3 " id="Food-Tab">
       <li class="nav-item">
-        <a href="#primary" class="nav-link active" data-bs-toggle="tab">Primary</a>
+        <a href="#primary" class="nav-link active" data-bs-toggle="tab">
+          <p>Primary</p>
+        </a>
       </li>
       <li class="nav-item">
-        <a href="#snack" class="nav-link" data-bs-toggle="tab">Snack</a>
+        <a href="#snack" class="nav-link" data-bs-toggle="tab">
+          <P>Snack</P>
+        </a>
       </li>
       <li class="nav-item">
-        <a href="#side" class="nav-link" data-bs-toggle="tab">Side Dish</a>
+        <a href="#side" class="nav-link" data-bs-toggle="tab">
+          <p>Side Dish</p>
+        </a>
       </li>
       <li class="nav-item">
-        <a href="#vegetable" class="nav-link" data-bs-toggle="tab">Vegetable</a>
+        <a href="#vegetable" class="nav-link" data-bs-toggle="tab">
+          <p>Vegetable</p>
+        </a>
       </li>
       <li class="nav-item">
-        <a href="#drink" class="nav-link" data-bs-toggle="tab">Drink</a>
+        <a href="#drink" class="nav-link" data-bs-toggle="tab">
+          <p>Beverage</p>
+        </a>
       </li>
       <li class="nav-item">
-        <a href="#party" class="nav-link" data-bs-toggle="tab">Party</a>
+        <a href="#party" class="nav-link" data-bs-toggle="tab">
+          <p>Party</p>
+        </a>
       </li>
     </ul>
     <div class="tab-content mb-5 mt-3">
@@ -1558,36 +1571,36 @@
       </div>
     </div>
   </div>
+  <!--End of tabs category-->
   <!--Footer-->
-  <footer>
-  <div class="footer mt-auto pt-3 mt-5">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <h4>Warung Hati</h4>
-          </div>
-          <div class="col text-end">
-            <a href="https://twitter.com/?lang=id" aria-label="go to twitter" class="text-decoration-none">
-              <i class="fa-brands fa-twitter px-2 fa-xl social"></i>
-            </a>
-            <a href="https://twitter.com/?lang=id" aria-label="go to facebook" class="text-decoration-none">
-              <i class="fa-brands fa-square-facebook px-2 fa-xl social"></i>
-            </a>
-            <a href="https://twitter.com/?lang=id" aria-label="go to instagram" class="text-decoration-none">
-              <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
-            </a>
-            <a href="https://twitter.com/?lang=id" aria-label="go to tiktok" class="text-decoration-none">
-              <i class="fa-brands fa-tiktok px-2 fa-xl social"></i>
-            </a>
-          </div>
-          <hr class="mt-1" />
-          <div class="text-center">
-            <p>@copyright by Warung Hati. Designed by cold_rawon</p>
-          </div>
+  <footer class="footer pt-3">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h4>Warung Hati</h4>
+        </div>
+        <div class="col text-end">
+          <a href="https://twitter.com/?lang=id" aria-label="go to twitter" class="text-decoration-none">
+            <i class="fa-brands fa-twitter px-2 fa-xl social"></i>
+          </a>
+          <a href="https://twitter.com/?lang=id" aria-label="go to facebook" class="text-decoration-none">
+            <i class="fa-brands fa-square-facebook px-2 fa-xl social"></i>
+          </a>
+          <a href="https://twitter.com/?lang=id" aria-label="go to instagram" class="text-decoration-none">
+            <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
+          </a>
+          <a href="https://twitter.com/?lang=id" aria-label="go to tiktok" class="text-decoration-none">
+            <i class="fa-brands fa-tiktok px-2 fa-xl social"></i>
+          </a>
+        </div>
+        <hr class="mt-1" />
+        <div class="text-center">
+          <p>@copyright by Warung Hati.</p>
         </div>
       </div>
     </div>
   </footer>
+  <!--End of Footer-->
 </body>
 </script>
 
