--- a/aboutus.html
+++ b/aboutus.html
@@ -16,7 +16,7 @@
 
 <body>
   <!--Navigation Bar Start-->
-  <nav class="navbar navbar-expand fixed-top" aria-label="Second navbar example">
+  <nav class="navbar navbar-expand navbar-scrolled" aria-label="Second navbar example">
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <h3>Warung Hati</h3>
@@ -64,7 +64,7 @@
             <i class="fa-brands fa-tiktok px-2 fa-xl social"></i>
           </a>
         </div>
-        <hr class="mt-1" />
+        <hr class="mt-1"/>
         <div class="text-center">
           <p>@copyright by Warung Hati.</p>
         </div>
