--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
       </div>
       <div class="carousel-caption">
         <h1>Lorem Ipsum</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, esse assumenda placeat corrupti expedita
-          necessitatibus laudantium nobis distinctio, ea id animi asperiores sit aliquid molestias porro veritatis ullam
-          suscipit unde.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus.</p>
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#bg-carousel" data-bs-slide="prev">
