--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <!--Navigation Bar Start-->
-  <nav class="navbar navbar-expand fixed-top" aria-label="Second navbar example">
+  <nav class="navbar navbar-expand-md fixed-top" aria-label="Second navbar example">
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <h3>Warung Hati</h3>
@@ -52,8 +52,8 @@
     <div class="homehead-overlay d-inline-flex p-2 align-items-center">
       <div class="container">
         <h1>Test</h1>
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum maxime cupiditate voluptatibus hic ipsa in
-          accusamus minima, soluta quis, dicta alias ipsum ex sint a doloremque iure corporis architecto explicabo.</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum maxime cupiditate voluptatibus hic ipsa in
+          accusamus minima, soluta quis, dicta alias ipsum ex sint a doloremque iure corporis architecto explicabo.</p>
       </div>
     </div>
   </div>
@@ -63,33 +63,29 @@
   <div class="container my-5">
     <div class="row">
       <div class="col-md-6">
-        <div id="slideshow" class="carousel slide" data-bs-ride="carousel">
-          <!-- Slideshow content here -->
-        </div>
-      </div>
-      <div class="col-md-6 mt-4 mt-md-0">
         <div class="text-center text-md-start">
-          <h2 class="fw-bold">About Us</h2>
+          <h2 class="fw-bold ">About Us</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut odio vel urna tristique bibendum vel vel
             magna. Proin in sem euismod, convallis massa vel, pharetra urna.</p>
-          <div class="d-flex justify-content-center align-items-center">
-            <a href="about.html" class="btn btn-primary mt-3">Learn More</a>
-          </div>
+          <a href="about.html" class="btn btn-primary mt-1">Learn More</a>  
         </div>
+      </div>
+      <div class="">
       </div>
     </div>
   </div>
   <!--End Quick about us-->
 
   <!--Best Pick-->
-  <div class="container py-4">
-    <div>
-      <h1 class="display-5 text-center fw-bold">Our recommendation</h1>
-    </div>
+  <h1 class="display-5 text-center fw-bold mb-3">Our recommendation</h1>
   </div>
   <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item rec-image bg-img-1 active">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>First slide label</h5>
+          <p>Some representative placeholder content for the first slide.</p>
+        </div>
       </div>
       <div class="carousel-item rec-image bg-img-2">
       </div>
@@ -112,7 +108,7 @@
   <div class="px-4 py-4 my-1">
     <h1 class="display-5 text-center fw-bold">Contact Us</h1>
     <h3 class="display-5 text-center fw-lighter ">For reservation and more information</h3>
-    <div class="container mt-5 text-center">
+    <div class="container mt-2 text-center">
       <div class="row py-5">
         <div class="col-md-4">
           <span class="fa-stack fa-5x mb-4">
