--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Home</title>
 </head>
+<style>
+</style>
 
 <body>
   <!--Navigation Bar Start-->
@@ -50,7 +52,7 @@
   <!--Slideshow start-->
   <div class="homehead" style="background-image: url(./img/Front_Page/BuburMadura.png);">
     <div class="homehead-overlay d-inline-flex p-2 align-items-center">
-      <div class="container">
+      <div class="container text-center w-50">
         <h1>Test</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum maxime cupiditate voluptatibus hic ipsa in
           accusamus minima, soluta quis, dicta alias ipsum ex sint a doloremque iure corporis architecto explicabo.</p>
@@ -60,17 +62,17 @@
   <!--End of Slideshow-->
 
   <!--Quick About us-->
-  <div class="container my-5">
+  <div class="container my-4">
     <div class="row">
-      <div class="col-md-6">
-        <div class="text-center text-md-start">
-          <h2 class="fw-bold ">About Us</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut odio vel urna tristique bibendum vel vel
-            magna. Proin in sem euismod, convallis massa vel, pharetra urna.</p>
-          <a href="about.html" class="btn btn-primary mt-1">Learn More</a>  
-        </div>
+      <div class="col-md-6 px-3">
+        <img src="img/Jajanan/Batagor.png" class="img-rest">
+        <img src="img/Front_Page/EsKuwutBali.png" class="img-rest">
       </div>
-      <div class="">
+      <div class="col-md-6 px-3">
+        <h1 style="font-size: 90px;">Selamat Datang</h1>
+        <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas doloribus corporis nulla nisi laudantium
+          alias ratione, vel ipsa, praesentium officiis adipisci obcaecati minus placeat magnam ex inventore laborum
+          facilis quisquam?</p>
       </div>
     </div>
   </div>
