--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarsExample02">
+      <div class="collapse navbar-collapse justify-content-center" id="navbarsExample02">
         <ul class="navbar-nav me-auto ms-1">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
@@ -54,7 +54,6 @@
       <div class="container w-75 text-center">
         <h1 class="text-center">Warung Hati</h1>
         <h5 class="text-center">"Lorem ipsum dolor sit amet consectetur adipisicing elit"</h5>
-        <a href="menu.html" class="btn btn-warning btn-lg mt-4"><i class="fa-solid fa-utensils"></i> Menu Kami</a>
       </div>
     </div>
   </div>
@@ -64,7 +63,7 @@
   <div class="container my-5">
     <div class="row">
       <div class="col-md-6 g-0 text-center">
-        <img src="img/Menu_Utama/Gado-Gado 3.png" class="img-rest">
+        <img src="img/Menu_Utama/Gado-Gado 3.png" style="object-position: 65%;" class="img-rest">
         <img src="img/5. Ala Carte/Sayur/Ayam Goreng.png" class="img-rest" style="margin-top: 50px;">
       </div>
       <div class="col-md-6">
@@ -106,7 +105,8 @@
           </div>
         </div>
         <div class="carousel-item c-item">
-          <img src="img/Jajanan/Batagor.png" class="d-block w-100 c-img" alt="Slide 2">
+          <img src="img/Jajanan/Batagor.png" class="d-block w-100 c-img" style="object-position: 50% 100% !important;"
+            alt="Slide 2">
           <div class="carousel-caption top-50 translate-middle-y text-start">
             <h1 class="display-1 fw-bolder text-capitalize">Batagor</h1>
             <hr class="w-50">
@@ -117,7 +117,8 @@
           </div>
         </div>
         <div class="carousel-item c-item">
-          <img src="img/Menu_Utama/Mie Kocok Bandung.png" class="d-block w-100 c-img" alt="Slide 3">
+          <img src="img/Menu_Utama/Mie Kocok Bandung.png" class="d-block w-100 c-img"
+            style="object-position: 50% 90% !important;" alt="Slide 3">
           <div class="carousel-caption top-50 translate-middle-y text-start">
             <h1 class="display-1 fw-bolder text-capitalize">Mie Kocok Bandung</h1>
             <hr class="w-50">
@@ -140,27 +141,27 @@
   </div>
   <!--End of Best Pick-->
   <!--Contact-->
-  <div class="container my-5">
-    <h1 class="display-3 text-center fw-bold">Chat sama kita</h1>
-    <h3 class="display-5 text-center fw-lighter">Untuk reservasi sama informasi tambahan</h3>
+  <div class="container my-4">
+    <h1 class="heading text-center fw-bold">Chat dengan kita</h1>
+    <h5 class="display-6 text-center fw-lighter">Untuk reservasi sama informasi tambahan</h5>
     <div class="container mt-2 text-center">
-      <div class="row my-5">
-        <div class="col-md-4">
-          <span class="fa-stack fa-5x mb-4">
+      <div class="row mt-3 mb-5">
+        <div class="col-md-4 mt-md-0 mt-sm-3">
+          <span class="fa-stack fa-5x mb-2">
             <i class="fa-solid fa-square fa-stack-2x"></i>
             <i class="fa-brands fa-whatsapp fa-stack-1x fa-inverse"></i>
           </span>
           <h4>(+62) 927 2194 196</h4>
         </div>
-        <div class="col-md-4">
-          <span class="fa-stack fa-5x mb-4">
+        <div class="col-md-4 mt-md-0 mt-sm-3">
+          <span class="fa-stack fa-5x mb-2">
             <i class="fa-solid fa-square fa-stack-2x"></i>
             <i class="fa-regular fa-envelope fa-stack-1x fa-inverse"></i>
           </span>
           <h4>tambakarna@greendike.com</h4>
         </div>
-        <div class="col-md-4">
-          <span class="fa-stack fa-5x mb-4">
+        <div class="col-md-4 mt-md-0 mt-sm-3">
+          <span class="fa-stack fa-5x mb-2">
             <i class="fa-solid fa-square fa-stack-2x"></i>
             <i class="fa-solid fa-map fa-stack-1x fa-inverse"></i>
           </span>
@@ -173,7 +174,7 @@
   <footer class="footer pt-3">
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col-5">
           <h4>Warung Hati</h4>
         </div>
         <div class="col text-end">
@@ -190,7 +191,7 @@
             <i class="fa-brands fa-tiktok px-2 fa-xl social"></i>
           </a>
         </div>
-        <hr class="mt-1" />
+        <hr class="mt-1"/>
         <div class="text-center">
           <p>@copyright by Warung Hati.</p>
         </div>
