--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <title>Home</title>
 </head>
 <style>
@@ -51,7 +52,7 @@
   <!--Slideshow start-->
   <div class="homehead" style="background-image: url(./img/Front_Page/BuburMadura.png);">
     <div class="homehead-overlay d-inline-flex p-2 align-items-center">
-      <div class="container w-75 text-center">
+      <div class="container w-75 text-center animate__animated animate__fadeInDown">
         <h1 class="text-center">Warung Hati</h1>
         <h5 class="text-center">"Lorem ipsum dolor sit amet consectetur adipisicing elit"</h5>
       </div>
@@ -60,7 +61,7 @@
   <!--End of Slideshow-->
 
   <!--Quick About us-->
-  <div class="container my-5">
+  <div class="container my-5 animate__animated animate__fadeInLeft">
     <div class="row">
       <div class="col-md-6 g-0 text-center">
         <img src="img/Menu_Utama/Gado-Gado 3.png" style="object-position: 65%;" class="img-rest">
@@ -69,7 +70,8 @@
       <div class="col-md-6">
         <div class="container start-50 mt-5 mt-md-0">
           <h1 class="heading">Selamat Datang</h1>
-          <p class="capt w-75"> Restaurant is a place for simplicity. Good food, good beer,
+          <p class="capt w-75"> Restaurant is a place for simplicity. Good food,
+            good beer,
             and good service. Simple is the
             name of the game, and we’re good at finding it in all the right places, even in your dining experience.
             We’re a small group from Denver, Colorado who make simple food possible. Come join us and see what
@@ -96,36 +98,45 @@
         <div class="carousel-item active c-item">
           <img src="img/Menu_Utama/Gado-Gado 3.png" class="d-block w-100 c-img" alt="Slide 1">
           <div class="carousel-caption top-50 translate-middle-y text-start">
-            <h1 class="display-1 fw-bolder text-capitalize">Gado-Gado</h1>
-            <hr class="w-50">
-            <p class="fs-5 w-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi ut aperiam saepe
-              veritatis
-              eius deleniti dolor illum ullam earum, harum perferendis nam nostrum culpa consectetur sit officia commodi
-              ducimus. Qui?</p>
+            <div class="animate__animated animate__fadeInLeft">
+              <h1 class="display-1 fw-bolder text-capitalize">Gado-Gado</h1>
+              <hr class="w-50">
+              <p class="fs-5 w-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi ut aperiam saepe
+                veritatis
+                eius deleniti dolor illum ullam earum, harum perferendis nam nostrum culpa consectetur sit officia
+                commodi
+                ducimus. Qui?</p>
+            </div>
           </div>
         </div>
         <div class="carousel-item c-item">
           <img src="img/Jajanan/Batagor.png" class="d-block w-100 c-img" style="object-position: 50% 100% !important;"
             alt="Slide 2">
           <div class="carousel-caption top-50 translate-middle-y text-start">
-            <h1 class="display-1 fw-bolder text-capitalize">Batagor</h1>
-            <hr class="w-50">
-            <p class="fs-5 w-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi ut aperiam saepe
-              veritatis
-              eius deleniti dolor illum ullam earum, harum perferendis nam nostrum culpa consectetur sit officia commodi
-              ducimus. Qui?</p>
+            <div class="animate__animated animate__fadeInLeft">
+              <h1 class="display-1 fw-bolder text-capitalize">Batagor</h1>
+              <hr class="w-50">
+              <p class="fs-5 w-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi ut aperiam saepe
+                veritatis
+                eius deleniti dolor illum ullam earum, harum perferendis nam nostrum culpa consectetur sit officia
+                commodi
+                ducimus. Qui?</p>
+            </div>
           </div>
         </div>
         <div class="carousel-item c-item">
           <img src="img/Menu_Utama/Mie Kocok Bandung.png" class="d-block w-100 c-img"
             style="object-position: 50% 90% !important;" alt="Slide 3">
           <div class="carousel-caption top-50 translate-middle-y text-start">
-            <h1 class="display-1 fw-bolder text-capitalize">Mie Kocok Bandung</h1>
-            <hr class="w-50">
-            <p class="fs-5 w-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi ut aperiam saepe
-              veritatis
-              eius deleniti dolor illum ullam earum, harum perferendis nam nostrum culpa consectetur sit officia commodi
-              ducimus. Qui?</p>
+            <div class="animate__animated animate__fadeInLeft">
+              <h1 class="display-1 fw-bolder text-capitalize">Mie Kocok Bandung</h1>
+              <hr class="w-50">
+              <p class="fs-5 w-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi ut aperiam saepe
+                veritatis
+                eius deleniti dolor illum ullam earum, harum perferendis nam nostrum culpa consectetur sit officia
+                commodi
+                ducimus. Qui?</p>
+            </div>
           </div>
         </div>
       </div>
@@ -191,7 +202,7 @@
             <i class="fa-brands fa-tiktok px-2 fa-xl social"></i>
           </a>
         </div>
-        <hr class="mt-1"/>
+        <hr class="mt-1" />
         <div class="text-center">
           <p>@copyright by Warung Hati.</p>
         </div>
