--- a/menu.html
+++ b/menu.html
@@ -49,12 +49,12 @@
   <!--Tabs of category-->
   <div class="container mt-5">
     <div class="text-center">
-      <h4>Here our Best Menu</h4>
+      <h1 class="heading">Menu terbaik kami</h1>
     </div>
     <ul class="nav nav-colorfirst justify-content-center mt-3 " id="Food-Tab">
       <li class="nav-item">
         <a href="#primary" class="nav-link active" data-bs-toggle="tab">
-          <p>Primary</p>
+          <p>Utama</p>
         </a>
       </li>
       <li class="nav-item">
@@ -64,22 +64,22 @@
       </li>
       <li class="nav-item">
         <a href="#side" class="nav-link" data-bs-toggle="tab">
-          <p>Side Dish</p>
+          <p>Pendamping</p>
         </a>
       </li>
       <li class="nav-item">
         <a href="#vegetable" class="nav-link" data-bs-toggle="tab">
-          <p>Vegetable</p>
+          <p>Sayur</p>
         </a>
       </li>
       <li class="nav-item">
         <a href="#drink" class="nav-link" data-bs-toggle="tab">
-          <p>Beverage</p>
+          <p>Minuman</p>
         </a>
       </li>
       <li class="nav-item">
         <a href="#party" class="nav-link" data-bs-toggle="tab">
-          <p>Party</p>
+          <p>Untuk Acara</p>
         </a>
       </li>
     </ul>
